--- a/web_reactjs/.env
+++ b/web_reactjs/.env
@@ -1,3 +1,3 @@
-API_KEY = 435f89fc50214542be7133005233006
-API_URL = "http://api.weatherapi.com/v1/current.json?"
+REACT_APP_KEY = 435f89fc50214542be7133005233006
+REACT_APP_URL = "http://api.weatherapi.com/v1/current.json?"
 
