--- a/web_reactjs/package.json
+++ b/web_reactjs/package.json
@@ -36,5 +36,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^8.0.1",
+    "svg-url-loader": "^8.0.0"
   }
 }
